2004/02/25 19:38 (-0500) rwmcfa1

	* xs/GdkColor.xs xs/GdkEvent.xs xs/GtkAccelGroup.xs xs/GtkAccelMap.xs
	xs/GtkCellRenderer.xs xs/GtkDialog.xs xs/GtkSelection.xs
	xs/GtkTreeModel.xs: =pod position=<pos> -> =for position <pos> 
	some pod parsers don't like text after =pod.

2004/02/25 15:45 (-0500) rwmcfa1

	* xs/GdkColor.xs, xs/GdkEvent.xs, xs/GtkAccelGroup.xs,
	xs/GtkAccelMap.xs, xs/GtkCellRenderer.xs, xs/GtkDialog.xs,
	xs/GtkSelection.xs, xs/GtkStock.xs, xs/GtkTreeModel.xs:	apidoc pod 
	positioning updates

2004/02/23 15:16 (-0500) rwmcfa1

	* t/00.Gtk2.t: versions could be 0, which would fail before, check for
	defined.

2004/02/23 14:38 (-0500) muppetman

	* CodeGen.pm: add to parse_maps the ability to generate error
	domain registrations.

	* maps-2.0, maps-2.3, xs/GdkPixbuf.xs, xs/GtkFileChooser.xs,
	xs/GtkIconTheme.xs: use the new code in Gtk2::CodeGen::parse_maps
	to register error domains automatically from the maps files, rather
	than by hand.

2004/02/22 15:35 (-0500) rwmcfa1

	* xs/Gtk2.xs: added gtk_(major|minor|micro)_version and
	GTK_(MAJOR|MINOR|MICRO)_VERSION and finally CHECK_VERSION. thus the 
	correct method for handling version numbers begins. more doc on howto
	do version checking and using this stuff where appliciable to come.

	* t/00.Gtk2.t: test out new stuff ^.

2004/02/22 20:56 (+0100) kaffeetisch

	* t/GtkFileChooserDialog.t
	* xs/GtkFileChooserDialog.xs: Bind and test new_with_backend.

	* t/GtkAction.t
	* t/GtkActionGroup.t
	* t/GtkColorButton.t
	* t/GtkComboBox.t
	* t/GtkComboBoxEntry.t
	* t/GtkEntryCompletion.t
	* t/GtkExpander.t
	* t/GtkFileChooser.t
	* t/GtkFileChooserDialog.t
	* t/GtkFileChooserWidget.t
	* t/GtkFileFilter.t
	* t/GtkFontButton.t
	* t/GtkRadioAction.t
	* t/GtkSeparatorToolItem.t
	* t/GtkToggleAction.t
	* t/GtkToggleToolButton.t
	* t/GtkToolButton.t
	* t/GtkToolItem.t
	* t/GtkTreeView-Dnd.t
	* xs/GtkAction.xs
	* xs/GtkActionGroup.xs
	* xs/GtkCellLayout.xs
	* xs/GtkColorButton.xs
	* xs/GtkComboBox.xs